--- a/home/templates/blog_comments.html
+++ b/home/templates/blog_comments.html
@@ -25,12 +25,26 @@ float: right;
                               {% endif %}
                         </a></h5>
                   {{post.dateTime}}
+                  {% if post.category == True %}
+                        <div class="media-body">
+                              <h5 class="mt-0">
+                                    Κατηγορία: Φυσικές Καταστροφές
+                              </h5>
+                        </div> 
+                  {% else %}
+                        <div class="media-body">
+                              <h5 class="mt-0">
+                                    Κατηγορία: Εγκληματικότητα
+                              </h5>
+                        </div> 
+                  {% endif %}
             </div>
       </div>
       <br>
-      <img src="/media/{{post.image}}" alt="" height="250px" width="500px">
-      <br>
+      <img src="/media/{{post.image}}">
+      <br><br><br>
       <p>{{post.content}}.</p>
+      <br>
       <hr>
       {% if user.is_authenticated %}
       <div class="container">
